--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -53,7 +53,7 @@ h1 {
     }
 }
 
-.section-padding {
+/* .section-padding {
     padding: 75px 0px;
 
     @include _768 {
@@ -64,7 +64,7 @@ h1 {
         padding: 150px 0px;
     }
 
-}
+} */
 
 section {
     position: relative;
