--- a/app/scss/_font.scss
+++ b/app/scss/_font.scss
@@ -38,8 +38,20 @@
 .section-title {
 
     font-family: var(--title-font);
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 1.875rem;
+    line-height: 115%;
+    letter-spacing: 0.01em;
 
+    color: #222222;
+
+    @include _768 {
+        font-size: 2.8125rem;
+    }
+    
+    @include _992 {
+        font-size: 3.4375rem;
+    }
 }
 
 .txt-center {
