--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,7 @@
 
 @import 'pages/index/main';
 @import 'pages/category/main';
+@import 'pages/my-orders/main';
 
 
 @import 'main-sections/footer';
