--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,6 +9,7 @@ body {
     
     font-weight: 400;
     line-height: 150%;
+    background: #F9EBE5;
     //padding-right: var(--popup-padding);
 
     &._active {
