--- a/app/scss/_font.scss
+++ b/app/scss/_font.scss
@@ -18,20 +18,27 @@
 .title {
     
     font-family: var(--title-font);
-    font-weight: 700;
-
-    font-size: 1.125rem;
+    font-weight: 600;
+    font-size: 1.375rem;
 
     @include _768 {
         font-size: 1.5rem;
     }
 
     @include _992 {
-        font-size: 1.875rem;
+        font-size: 1.75rem;
     }
     
-    &._min {
-
+    &._large {
+        font-weight: 500;
+        
+        @include _768 {
+            font-size: 1.75rem;
+        }
+    
+        @include _992 {
+            font-size: 2.1875rem;
+        }
     }
 }
 
