--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -115,6 +115,13 @@ section {
         width: 100%;
     }
 
+    &._disabled {
+        background: #F1F1F1;
+        box-shadow: none;
+        color: #C5C5C5;
+        pointer-events: none;
+    }
+
     &._bold {
         padding: 13px 11px;
 
