--- a/app/scss/_null.scss
+++ b/app/scss/_null.scss
@@ -20,9 +20,9 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-/* select {
+select {
 	-webkit-appearance: none;
-} */
+}
 
 input[type=number] {
   -moz-appearance: textfield;
