--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'pages/index/main';
 @import 'pages/category/main';
 @import 'pages/my-orders/main';
+@import 'pages/buffet/main';
 
 
 @import 'main-sections/footer';
