--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -1,4 +1,4 @@
-.input {
+.input, .textarea {
     background: #FAFAFA;
     border: 1px solid #EEEEEE;
     border-radius: 3px;
@@ -68,6 +68,10 @@
     }
 }
 
+.textarea {
+    resize: none;
+}
+
 .select {
     background: #FAFAFA;
     border: 1px solid #EEEEEE;
@@ -95,10 +99,6 @@
 
 .qs-controls {
     background: #f9ebe5;
-}
-
-.qs-active {
-    
 }
 
 .qs-square {
