--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -59,18 +59,13 @@ h1 {
     }
 }
 
-/* .section-padding {
-    padding: 75px 0px;
+.section-padding {
+    padding: 38px 0 60px 0;
 
     @include _768 {
-        padding: 100px 0px;
+        padding: 38px 0 100px 0;
     }
-
-    @include _992 {
-        padding: 150px 0px;
-    }
-
-} */
+}
 
 section {
     position: relative;
@@ -103,6 +98,10 @@ section {
         min-width: 185px;
     }
     
+    &._alt {
+        padding: 15px 13px;
+        min-width: 143px;
+    }
 
     &._center {
         text-align: center;
@@ -186,7 +185,7 @@ section {
 
     box-shadow: 0px 15px 35px rgba(174, 64, 66, 0.25);
 
-    transition: background .2s ease-in-out, box-shadow .2s ease-in-out;
+    transition: background .2s ease-in-out, box-shadow .2s ease-in-out, opacity .2s ease-in-out;
 
     &.swiper-button-disabled {
         opacity: 1;
@@ -240,4 +239,19 @@ section {
     }
 }
 
+.sub-text {
+    display: block;
+    font-weight: 500;
+    font-size: 0.8125rem;
+    line-height: 150%;
+    color: #565656;
 
+    @include _768 {
+        margin-top: 7px;
+        font-size: 1rem;
+    }
+    
+    @include _992 {
+        font-size: 1.25rem;
+    }
+}
