--- a/app/scss/pages/category/_main.scss
+++ b/app/scss/pages/category/_main.scss
@@ -762,13 +762,15 @@
         & ul {
             display: flex;
             flex-direction: column;
+            margin-bottom: -5px;
             & li {
                 display: flex;
-                align-items: center;
+                padding: 3px 0;
 
                 font-size: 0.75rem;
+                line-height: 150%;
                 @include _768 {
-                    font-size: 0.875rem;    
+                    font-size: 0.875rem;
                 }
 
                 color: #565656;
@@ -780,7 +782,7 @@
                     border-radius: 50%;
                     background: #F9EBE5 url("data:image/svg+xml,%3Csvg viewBox='0 0 6 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.86058 0.980681C5.67494 0.794793 5.37349 0.79491 5.1876 0.980681L2.15872 4.00968L0.812514 2.66348C0.626626 2.4776 0.325304 2.4776 0.139416 2.66348C-0.0464721 2.84937 -0.0464721 3.15069 0.139416 3.33658L1.8221 5.01927C1.91499 5.11215 2.03678 5.15871 2.15859 5.15871C2.2804 5.15871 2.40231 5.11227 2.4952 5.01927L5.86058 1.65377C6.04647 1.46801 6.04647 1.16656 5.86058 0.980681Z' fill='%23E4AB93'/%3E%3C/svg%3E%0A")
                     center / 50% no-repeat;
-                    margin-right: 8px;
+                    margin-right: 8px; margin-top: 3px;
                 }
             }
         }
