--- a/app/scss/pages/my-orders/_main.scss
+++ b/app/scss/pages/my-orders/_main.scss
@@ -60,7 +60,42 @@
             position: relative;
             border-radius: 5px;
 
-            padding: 26px 59px 19px 19px;
+            padding: 26px 59px 19px 19px; 
+            &._alt-padding {
+                padding: 45px 14px 14px 10px;
+                @media (min-width: 500px) {
+                    padding: 5px 59px 19px 5px;
+                }
+            }
+        }
+
+        // .my-orders__item--row
+
+        &--row {
+            display: grid;
+            grid-template-columns: 65px auto;
+            @media (min-width: 500px) {
+                grid-template-columns: 115px auto;
+            }
+        }
+
+        &--col:nth-child(2) {
+            padding-left: 17px;
+        }
+
+        // .my-orders__item--image
+
+        &--image {
+            width: 100%; padding-top: 100%;
+            position: relative;
+
+            & img {
+                position: absolute;
+                left: 0; top: 0;
+                width: 100%; height: 100%;
+                object-fit: cover;
+                border-radius: 3px;
+            }
         }
 
         // .my-orders__item--remove
@@ -93,6 +128,37 @@
         &--text {
             padding-top: 3px;
             color: #373737;
+        }
+
+        // .my-orders__item--list
+
+        &--list {
+            display: flex;
+            flex-wrap: wrap;
+
+            padding-top: 7px;
+            margin: -6px -9px;
+            
+            & li {
+                font-size: 0.875rem;
+                line-height: 100%;
+                color: #6D6D6D;
+
+                padding: 6px 9px;
+
+                display: flex;
+                align-items: center;
+
+                &::before {
+                    content: '';
+                    width: 14px; height: 14px;
+                    display: block;
+                    background: #FAFAFA url("data:image/svg+xml,%3Csvg viewBox='0 0 6 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.86058 0.980681C5.67494 0.794793 5.37349 0.79491 5.1876 0.980681L2.15872 4.00968L0.812514 2.66348C0.626626 2.4776 0.325305 2.4776 0.139416 2.66348C-0.0464721 2.84937 -0.0464721 3.15069 0.139416 3.33658L1.8221 5.01927C1.91499 5.11215 2.03678 5.15871 2.15859 5.15871C2.2804 5.15871 2.40231 5.11227 2.4952 5.01927L5.86058 1.65377C6.04647 1.46801 6.04647 1.16656 5.86058 0.980681Z' fill='%238D8D8D'/%3E%3C/svg%3E%0A")
+                    center / 50% no-repeat;
+                    border-radius: 50%;
+                    margin-right: 7px;
+                }
+            }
         }
 
         // .my-orders__item--tag
