--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,6 +13,8 @@
 @import 'pages/category/main';
 @import 'pages/my-orders/main';
 @import 'pages/buffet/main';
+@import 'pages/contact-us/main';
+@import 'pages/about-us/main';
 
 
 @import 'main-sections/footer';
